--- a/clean-react/package.json
+++ b/clean-react/package.json
@@ -27,6 +27,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^5.0.7",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
