--- a/clean-react/package.json
+++ b/clean-react/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
@@ -34,6 +35,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^5.0.7",
     "husky": "^9.0.11",
+    "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
